outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval3548783590290087493_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the inverse of the sum of distances to all other unvisited nodes, and the selection threshold is dynamically adjusted based on the node's centrality, favoring nodes that are both close and central while giving the destination node a higher priority if it is nearby.}
                                                                                                                                                      ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined as the inverse of the sum of distances to all other unvisited nodes, and the selection threshold is dynamically adjusted based on the node's centrality, favoring nodes that are both close and central while giving the destination node a higher priority if it is nearby.}
                                                                                                                                                      ^
SyntaxError: unterminated string literal (detected at line 1)
